Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -26,13 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "5\n",
       "4\n",
       "3\n",
       "2\n",
@@ -42,7 +43,7 @@
     }
    ],
    "source": [
-    "stop_number = 4\n",
+    "stop_number = \n",
     "while stop_number > 0:\n",
     "    print(stop_number)\n",
     "    stop_number -=1\n",
