Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -26,27 +26,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
+      "6\n",
       "4\n",
-      "3\n",
       "2\n",
-      "1\n",
       "The stop_number reached 0 so the while loop's condition became False and stopped execution\n"
      ]
     }
    ],
    "source": [
-    "stop_number = \n",
+    "stop_number = 6\n",
     "while stop_number > 0:\n",
     "    print(stop_number)\n",
-    "    stop_number -=1\n",
+    "    stop_number -=2\n",
     "print(\"The stop_number reached\", stop_number, \"so the while loop's condition became False and stopped execution\")"
    ]
   },
